# aeon-engine

./: .gitignore  PACKAGE_SUMMARY.md  README.md  engine.toml  main.py  pyproject.toml  worklog.md
aeon_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  DIAGRAMS.md  MODDING_GUIDE.md  PLUGIN_GUIDE.md
engine/: __init__.py  _combat_variants.py  engine.py
engine/accessibility/: __init__.py  system.py
engine/aerial_combat/: __init__.py  system.py
engine/animals/: __init__.py  system.py
engine/artifacts/: __init__.py  system.py
engine/auctions/: __init__.py  system.py
engine/audio/: __init__.py  system.py
engine/background_sim/: __init__.py  system.py
engine/behaviors/: __init__.py  tree.py
engine/blackmarket/: __init__.py  system.py
engine/bodyparts/: __init__.py  system.py
engine/bookmarks/: __init__.py  system.py
engine/combat/: __init__.py  damage.py  effects.py  system.py
engine/commands/: __init__.py  system.py
engine/companies/: __init__.py  system.py
engine/content_packs/: __init__.py  system.py
engine/core/: __init__.py  clock.py  config.py  ecs.py  events.py  logging.py
engine/npc/: ai.py  (+6 more)
mods/: example_mod.json  example_mod.lua  example_mod.yaml
scripts/: test_all_commands.py  test_full_session.py
tests/: test_async_and_networking.py  test_combat.py  test_ecs.py  test_events.py  test_gameplay.py  test_integration.py  test_items.py  test_new_systems.py  test_performance.py  test_phase3_systems.py  test_plugins.py  test_repl.py  test_world.py
(+128 files in other folders)
